force-app/main/default/objects/FQS_Donor_Tier__mdt/fields/Branded_Name__c.field-meta.xml
<CustomField>
    <fullName>Branded_Name__c</fullName>
    <description>The donor-facing display name for this donor tier. Referenced by the DonorGiftSummary formula fields FQS_Annual_Donor_Level_Name__c and FQS_Lifetime_Donor_Level_Name__c. Change this value to rebrand tier names (e.g., &quot;Friend&quot; to &quot;Community Member&quot;) across all Donor Gift Summary records without redeployment.</description>
    <inlineHelpText>The organization's specific naming structure for public donor recognition. Changing this value here automatically updates FQS_*_Donor_Level_Name__c on all Donor Gift Summary records. Example values: Friend, Partner, Champion or Entry, Rising, Summit.</inlineHelpText>
    <label>Donor Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>