force-app/main/default/objects/FQS_Donor_Tier__mdt/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <description>Determines which giving totals count toward this donor tier. Hard Credits Only: only the donor's own gifts (TotalGiftsAmount / GiftsThisYearAmount + FQS legacy hard credits). Hard + Soft Credits: also includes soft-credit totals (TotalSoftCreditsAmount / CurrentYearSoftCreditsAmount + FQS legacy soft credits). Setting is per-tier — a Major tier can count soft credits while an Entry tier stays hard-only. Defaults to Hard Credits Only when blank. Changing this value recalculates the affected FQS_*_Donor_Level__c / FQS_Is_*_Donor__c formulas retroactively across all Donor Gift Summary records — no redeployment or batch job required.</description>
    <inlineHelpText>Choose whether this donor tier counts hard credits only, or hard + soft credits combined. Configured per tier — a Major tier can count soft credits (spouses, foundation-driven gifts) while an Entry tier stays hard-only.</inlineHelpText>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Credits Only</fullName>
                <default>true</default>
                <label>Hard Credits Only</label>
            </value>
            <value>
                <fullName>Hard + Soft Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>