force-app/main/default/objects/FQS_Donor_Tier__mdt/fields/One_Time_Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Min_Amount__c</fullName>
    <description>Minimum single-transaction amount (inclusive) required to qualify for this donor tier based on a one-time gift. Referenced by the GiftTransaction boolean formula fields FQS_Is_Entry_Gift__c, FQS_Is_Mid_Gift__c, and FQS_Is_Major_Gift__c. Changing this value in Setup → Custom Metadata Types → FQS Donor Tier (or via the FQS Setup flow) recalculates those boolean fields across all Gift Transaction records retroactively — no redeployment or batch job required. Reports and dashboards using these fields will reflect the new values immediately.</description>
    <inlineHelpText>The minimum gift amount for a single transaction to qualify for this donor tier. Your administrator controls this threshold. Updating it automatically recalculates the giving level across all Gift Transactions.</inlineHelpText>
    <label>One-Time Minimum Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>