force-app/main/default/objects/FQS_Donor_Tier__mdt/fields/Tier_Key__c.field-meta.xml
<CustomField>
    <fullName>Tier_Key__c</fullName>
    <description>The generic donor tier key. Referenced by the DonorGiftSummary formula fields FQS_Annual_Donor_Level__c and FQS_Lifetime_Donor_Level__c to classify donors. Must match the DeveloperName of this record so the formula evaluation is consistent. Allowed values: Entry, Mid, Major.</description>
    <inlineHelpText>The generic donor tier. The FQS_*_Donor_Level__c formula fields on Donor Gift Summary return this value and it is used for list views and reports. A single custom metadata record is expected for each of these picklist values.</inlineHelpText>
    <label>Tier Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>